Fix spacing

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -2,7 +2,7 @@
 
 body {
   padding:4px;
-  font:16px/1.1 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font:16px/1.2 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#222;
   font-weight:300;
 }
